[gd_scene load_steps=5 format=3 uid="uid://b5i3kst7shrd2"]

[ext_resource type="Script" path="res://framework/interfaces/user_interfaces/basic_settings_interface.gd" id="1_yjggg"]
[ext_resource type="Script" path="res://framework/interfaces/widgets/interface_resizer.gd" id="2_1huwc"]
[ext_resource type="PackedScene" uid="uid://b2uhanojuhssd" path="res://framework/interfaces/widgets/basic_header.tscn" id="3_nto3o"]
[ext_resource type="PackedScene" uid="uid://dta0kmj3jy7n3" path="res://framework/interfaces/user_interfaces/basic_settings.tscn" id="4_enno8"]

[node name="BasicSettingsInterface" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_yjggg")

[node name="InterfaceResizer" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("2_1huwc")
target = NodePath("..")

[node name="Header" parent="." instance=ExtResource("3_nto3o")]
layout_mode = 2
title = "TEXT_GAME_SETTINGS"

[node name="settings" parent="." instance=ExtResource("4_enno8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 9.0

[connection signal="back_request" from="Header" to="." method="_on_header_back_request"]
[connection signal="applied" from="settings" to="." method="_on_settings_applied"]
[connection signal="canceled" from="settings" to="." method="_on_settings_canceled"]
[connection signal="confirmed" from="settings" to="." method="_on_settings_confirmed"]
